<resources>
    <string name="app_name">Habitify</string>
    <string name="tv_welcome">Welcome %s!</string>
    <string name="splash_tagline">Build Better Habits\nStay Consistent</string>
    <string name="login_title">Log In</string>
    <string name="login_subtitle">Let\'s get to work.</string>
    <string name="login_email_label">Email</string>
    <string name="login_email_hint">Email Address</string>
    <string name="login_password_label">Password</string>
    <string name="login_password_hint">Password</string>
    <string name="login_forgot_password">Forgot Password</string>
    <string name="login_button_text">Log In</string>
    <string name="login_or_divider">OR</string>
    <string name="login_signup_button_text">Sign Up</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="forgot_password_subtitle">Enter Your Email Or Phone Number To Reset Your Password</string>
    <string name="forgot_password_label">Enter Your New Password</string>
    <string name="forgot_password_hint">Email Address or Phone Number</string>
    <string name="forgot_password_button_text">Reset Password</string>
    <string name="reset_password_title">Reset Password</string>
    <string name="reset_password_subtitle">Type your New Password and Confirm it below</string>
    <string name="reset_password_new_label">Enter Your New Password</string>
    <string name="reset_password_new_hint">New Password</string>
    <string name="reset_password_confirm_label">Confirm Password</string>
    <string name="reset_password_confirm_hint">Confirm Password</string>
    <string name="reset_password_button_text">Save Password</string>
    <string name="signup_title">Sign Up</string>
    <string name="signup_subtitle">Let\'s get to work.</string>
    <string name="signup_email_label">Email</string>
    <string name="signup_password_label">Password</string>
    <string name="signup_name_label">Name</string>
    <string name="signup_name_hint">Full Name</string>
    <string name="signup_button_text">Sign Up</string>
    <string name="signup_login_button_text">Log In</string>
    <string name="home_welcome">Welcome Kashan!</string>
    <string name="home_banner_title">Create Better\nHabits, Stay\nConsistent</string>
    <string name="home_banner_button">Build a Better Life ></string>
    <string name="home_habit_running">Running</string>
    <string name="home_habit_running_stats">25 People\nCreated 2 Months Ago</string>
    <string name="home_habit_walking">Walking</string>
    <string name="home_habit_walking_stats">100+ People\nCreated Last Week</string>
    <string name="home_habit_reading">Reading</string>
    <string name="home_habit_reading_stats">10 People\nCreated 1 Year Ago</string>

    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_add">Add</string>
    <string name="bottom_nav_settings">Settings</string>
    <string name="habit_list_search_hint">Search</string>
    <string name="habit_list_chip_todo">To Do</string>
    <string name="habit_list_chip_done">Done</string>
    <string name="habit_list_chip_failed">Failed</string>
    <string name="habit_list_add_button">Add Habits</string>
    <string name="habit_example_running_title">Running</string>
    <string name="habit_example_running_freq">Once Every 4 Days</string>
    <string name="habit_example_reading_title">Reading</string>
    <string name="habit_example_reading_freq">Once Every 3 Days</string>
    <string name="habit_example_workout_title">Work Out</string>
    <string name="habit_example_workout_freq">Daily</string>
    <string name="habit_example_reading_done_title">Reading</string>
    <string name="habit_example_reading_done_freq">Friday</string>
    <string name="habit_example_running_done_title">Running</string>
    <string name="habit_example_running_done_freq">Wednesday</string>
    <!-- Manage Account Screen -->
    <string name="manage_account_title">Manage Account</string>
    <string name="manage_account_edit_info">Edit account information</string>
    <string name="manage_account_change_password">Change Password</string>
    <string name="manage_account_continue">Continue</string>

    <string name="habit_example_reading_failed_title">Reading</string>
    <string name="habit_example_reading_failed_freq">Friday</string>
    <string name="habit_example_running_failed_title">Running</string>
    <string name="habit_example_running_failed_freq">Wednesday</string>
    <string name="settings_title">Settings</string>
    <string name="settings_username">Kashan AE</string>
    <string name="settings_manage_account">Manage Account</string>
    <string name="settings_languages">Languages</string>
    <string name="settings_help_center">Help Center</string>
    <string name="settings_push_notifications">Push Notifications</string>
    <string name="settings_logout">Logout</string>
    <string name="settings_themes">Themes</string>

</resources>